--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
 
         <div class="resultl">
             <p>L = S x S</p>
+            <p>L = <span class="sisi1">0</span> x <span class="sisi2">0</span></p>
             <p>L = <span id="luas"></span> </p>
         </div>
         <div class="resultk">
             <p>K = 4 x S</p>
+            <p>K = 4 x <span class="sisi3">0</span></p>
             <p>K = <span id="keliling"></span> </p>
         </div>
 
